# ------------------------------------------------------------------------------
# Copyright 2018-2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "as5048a"
version = "0.2.0"
edition = "2021"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust driver for AMS AS5048A Magnetic Rotary Encoder"
documentation = "https://docs.rs/as5048a"
keywords = ["embedded-hal-driver", "AMS", "AS5048A"]
license = "Apache-2.0"
repository = "https://github.com/uwearzt/as5048a"

[dependencies]
embedded-hal = "0.2.6"

# ------------------------------------------------------------------------------
# build example raspberrypi.rs
linux-embedded-hal = "0.3.2"
